fix: broken background on small window

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -173,7 +173,11 @@
         min-height: 100vh;
         background-size: cover;
         background-position: center 50px;
-        background-repeat: no-repeat;
+        background-repeat: repeat-y;
+    }
+
+    body.products-bg {
+        /* background-position: 30px; */
     }
 
     body.products-bg {
@@ -186,7 +190,6 @@
 
     body.contact-bg {
         background-image: url("https://res.cloudinary.com/dky8szloh/image/upload/v1770308052/image_fsluhb.webp");
-
     }
 
     #registerCard,
